[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-typesense"
version = "0.1.0"
description = "LangGraph checkpointer backed by Typesense"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "typesense>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["langgraph_checkpoint_typesense"]
