[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typesense-langgraph-checkpointer"
version = "0.1.6"
description = "LangGraph checkpointer backed by Typesense"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "typesense>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["_pytest.*", "pytest.*"]
follow_imports = "skip"

[tool.hatch.build.targets.wheel]
packages = ["langgraph_checkpoint_typesense"]
